--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.13.4",
     "@prisma/client": "^4.13.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
