--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
