--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/validator": "^13.7.17",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
