--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "jose": "^4.14.4",
     "next": "13.3.2",
     "prisma": "^4.13.0",
     "react": "18.2.0",
