--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.2",
     "prisma": "^4.13.0",
     "react": "18.2.0",
