--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/validator": "^13.7.17",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
