--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/react-dom": "18.2.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cookies-next": "^2.1.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.3.2",
+    "next": "13.4.2",
     "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
